Update close button

--- a/index.html
+++ b/index.html
@@ -558,7 +558,8 @@ font-size: 21px;
                 instance.updateLanguagePack(customLanguagePack);
                 instance.updateHomeScreenConfig({
                     is_on: true,
-                    greeting: 'Cześć! Jestem Hank. Postaram się zadbać o Twój komfort podczas tego wydarzenia'
+                    greeting: 'Cześć! Jestem Hank. Postaram się zadbać o Twój komfort podczas tego wydarzenia',
+                    launcher_closeButton: 'Zamknij'
                 })
                 // about our events.
                 instance.on({ type: 'customResponse', handler: customResponseHandler });
