--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@ font-size: 21px;
                 instance.updateLanguagePack(customLanguagePack);
                 instance.updateHomeScreenConfig({
                     is_on: true,
-                    greeting: 'Cześć! Jestem Hank. Postaram się zadbać o Twój komfort podczas tego wydarzenia',
+                    greeting: 'Cześć! Jestem Hank. W czym mogę Ci dzisiaj pomóc?',
                     launcher_closeButton: 'Zamknij'
                 })
                 // about our events.
